<resources>
    <string name="app_name">Music</string>
    <string name="tab_song">Song</string>
    <string name="tab_album">Album</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_folder">Folder</string>
    <string name="drawer_song">Library</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_history">History</string>
    <string name="from_bsplayer">From BSPlayer</string>
    <string name="model_random">Shuffle</string>
    <string name="model_repeat">Repeat</string>
    <string name="model_normal">Loop</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_song">Unknown song</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>
    <string name="eq_initial_failed">Equalizer initialization failed</string>
    <string name="use_eq">Use equalizer</string>
    <string name="my_favorite">My favorite</string>
    <string name="list_is_empty">List is empty</string>
    <string name="recently">Recently</string>
    <string name="no_song">No song</string>
    <string name="share_error">Share failed</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="input_playlist_name">Please input the name of playlist</string>
    <string name="song_lose_effect">The song is not available</string>
    <string name="add_playlist_success">Create playlist success</string>
    <string name="playlist_already_exist">The playlist already exists</string>
    <string name="more">More</string>
    <string name="select_all">Select all</string>
    <string name="add_error">Add failed</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_song_playlist_success">Add %1$d songs into %2$s</string>
    <string name="delete_multi_song">Remove %d songs</string>
    <string name="add_song_playqueue_success">Add %1$d songs into playing queue </string>
    <string name="add_song_playlist_error">Add songs to playlist failed</string>
    <string name="confirm_delete_from_playlist_or_library">Confirm to remove from %s?</string>
    <string name="delete_success">Remove success</string>
    <string name="delete_error">Remove failed</string>
    <string name="set_ringtone_success">Set as ringtone success</string>
    <string name="set_ringtone_error">Set as ringtone failed</string>
    <string name="set_success">Apply success</string>
    <string name="plz_set_correct_time">Please set the correct time</string>
    <string name="cancel_success">Cancel success</string>
    <string name="play_random">shuffle all(%d)</string>
    <string name="search_hint">Search song artist album</string>
    <string name="no_search_result">No result</string>
    <string name="create_playlist">Create playlist...</string>
    <string name="use_system_color">Use the system background color</string>
    <string name="use_black_color">Use the black background color</string>
    <string name="play_queue">Playing queue(%d)</string>
    <string name="choose_song">Choose song</string>
    <string name="choose_no_song">No songs were selected</string>
    <string name="set_album_cover_error">Set album cover failed</string>
    <string name="set_artist_cover_error">Set artist cover failed</string>
    <string name="set_playlist_cover_error">Set playlist cover failed</string>
    <string name="new_folder">New folder</string>
    <string name="choose_folder">Choose </string>
    <string name="setting_error">Set failed</string>
    <string name="song_not_empty">The name of the song cannot be empty</string>
    <string name="save_success">Save Success</string>
    <string name="save_error">Save failed</string>
    <string name="save_error_arg">Save failed: %s</string>
    <string name="screenshot_save_at">The screenshot has been saved to %s</string>
    <string name="need_permission">App needs necessary permissions</string>
    <string name="play_now">Playing: %s</string>
    <string name="cache_size">%1$2.2f MB</string>
    <string name="confirm_clear_cache">Confirm to clear cache?</string>
    <string name="mylove_cant_edit">My favorite is not editable</string>
    <string name="error">Error</string>
    <string name="qq">QQ</string>
    <string name="record_share">Share as poster</string>
    <string name="share">Share</string>
    <string name="timer">Sleep with music</string>
    <string name="as_default">Set as default</string>
    <string name="close">Close</string>
    <string name="timer_default_info_title">"Sleep Timer" 时间设为默认</string>
    <string name="timer_default_info_content">"Sleep Timer" 时间设为默认后，下次点击定时停止按钮后，将直接按之前设置好的时间开始计时。\n\n想要更改“定时停止”的时间，点击两次定时停止按钮即可进入设置页面。</string>
    <string name="timer_pending_close">Exit after play finished</string>
    <string name="playing">Now playing</string>
    <string name="set_filter_size">Set the size of filter</string>
    <string name="delete">Remove</string>
    <string name="ring">Ringtone</string>
    <string name="search">Search</string>
    <string name="timer_close">Sleep timer</string>
    <string name="song_detail">Song detail</string>
    <string name="song_edit">Tag editor</string>
    <string name="common">Common</string>
    <string name="lrc">Lyric</string>
    <string name="music_filter">Filter</string>
    <string name="lockscreen_show">LockScreen</string>
    <string name="manual_scan">Manual scan</string>
    <string name="lrc_priority">Priority of lyric search</string>
    <string name="lrc_priority_tip">Config priority of lyric search(long press and drag to sort)</string>
    <string name="navigation_color">Colored navigation bar</string>
    <string name="navigation_is_show">Whether colored navigation bar</string>
    <string name="shake">Shake</string>
    <string name="shake_tip">Shake to change song</string>
    <string name="color">Colors</string>
    <string name="primary_color">Primary color</string>
    <string name="primary_color_tip">Allow yourself to choose colors that you love</string>
    <string name="notify_bg_color">Background color</string>
    <string name="other">Other</string>
    <string name="eq_setting">Equalizer</string>
    <string name="clear_cache">Clear cache</string>
    <string name="choose">Choose</string>
    <string name="confirm_delete_playlist">Whether to remove the selected playlist?</string>
    <string name="confirm_delete_from_playlist">Whether to remove from playlist?</string>
    <string name="confirm_delete_from_library">Whether to remove from library?</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="eq">Equilizer</string>
    <string name="collect">Add to my favorite</string>
    <string name="only_lollopop">Only support Android 5.0 and above</string>
    <string name="bsplayer_lockscreen">BSPlayer LockScreen</string>
    <string name="system_lockscreen">System LockScreen</string>
    <string name="bsplayer_lockscreen_tip">Uses the current songs album cover as lockscreen wallpaper,the style depends on BSPlayer</string>
    <string name="system_lockscreen_tip">Uses the current songs album cover as lockscreen wallpaper,the style depends on your system</string>
    <string name="lockscreen_off_tip">Lockscreen will\'t show album cover(some features will be unavailable)</string>
    <string name="choose_or_close_lockscreen">Whether lockscreen will show the album cover</string>
    <string name="illegal_arg">Parameters error</string>
    <string name="song_count">%d songs</string>
    <string name="song_count_1">%d songs</string>
    <string name="song_count_2">%1$s    %2$d songs</string>
    <string name="searching">Searching</string>
    <string name="no_lrc">No lyric</string>
    <string name="local_list">Playlist</string>
    <string name="next_song">Next song: %s</string>
    <string name="please_wait">Please wait</string>
    <string name="processing_picture">Processing the image</string>
    <string name="clear_success">Clear success</string>
    <string name="setting">Settings</string>
    <string name="reset">Reset</string>
    <string name="add_local_list">Add to playlist</string>
    <string name="new_list">New Playlist...</string>
    <string name="panoramic_surround">Panoramic surround</string>
    <string name="mega_bass">Mega Bass</string>
    <string name="clear_voice">Clear Voice</string>
    <string name="headphone_adaptation">Headphone adaptation</string>
    <string name="customized_sound_effects_for_human_ears">Customized sound effects for human ears</string>
    <string name="song_path">File path:</string>
    <string name="song_name">File name:</string>
    <string name="file_size">Size:</string>
    <string name="format">Format:</string>
    <string name="length">Length:</string>
    <string name="bitrate">Bitrate:</string>
    <string name="sample_rate">SampleRate:</string>
    <string name="song_name_input_hint">Song name</string>
    <string name="album_input_hint">Album</string>
    <string name="artist_input_hint">Artist</string>
    <string name="year_input_hint">Year</string>
    <string name="track_number_input_hint">Track number</string>
    <string name="genre_input_hint">Genre</string>
    <string name="grant_write_permission_tip">Please grant permission to write the media file</string>
    <string name="write_something">Every time i think of this song,i ...</string>
    <string name="song_sheet">Playlist</string>
    <string name="play_failed">unable to play:</string>
    <string name="cant_request_audio_focus">Audio focus denied</string>
    <string name="float_lrc">Desktop lyric</string>
    <string name="closed_desktop_lrc">Desktop lyric is off</string>
    <string name="opened_desktop_lrc">Desktop lyric is on</string>
    <string name="statusbar_lrc">Statusbar Lyric</string>
    <string name="confirm_ignore_lrc">Confirm to ignore lyric?</string>
    <string name="confirm_cancel_ignore_lrc">Confirm to cancel ignore?</string>
    <string name="ignore_lrc">Ignore lyric</string>
    <string name="cancel_ignore_lrc">Cancel ignore lyric</string>
    <string name="select_lrc">Manual choose</string>
    <string name="path_empty">The path is empty</string>
    <string name="desktop_lyric_lock">The desktop lyric has been locked</string>
    <string name="desktop_lyric__unlock">The desktop lyric has been unlocked</string>
    <string name="screen_always_on_title">Lyric page screen always on</string>
    <string name="screen_always_on_tip">The screen is always on when you are in lyric page</string>
    <string name="plz_give_float_permission">Grant floating window permission in settings</string>
    <string name="plz_give_access_external_storage_permission">Please give permission to access external storage</string>
    <string name="show_recently">Shows the songs imported in the last week</string>
    <string name="kugou">Kugou</string>
    <string name="netease">Netease</string>
    <string name="sort_order">Sort</string>
    <string name="album">Album</string>
    <string name="album_desc">Album desc</string>
    <string name="title">Title</string>
    <string name="title_desc">Title desc</string>
    <string name="display_title">File name</string>
    <string name="display_title_desc">File name desc</string>
    <string name="artist">Artist</string>
    <string name="artist_desc">Artist desc</string>
    <string name="date">Date</string>
    <string name="date_desc">Date desc</string>
    <string name="change_offset">Adjust Timeline</string>
    <string name="lyric_adjust_font_size">Adjust Font Size</string>
    <string name="embedded_lyric">Embedded</string>
    <string name="local">Local</string>
    <string name="tab_home">home</string>
    <string name="tab_play">play</string>
    <string name="tab_me">me</string>
</resources>