<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_more_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1C232D"
    android:orientation="vertical"
    android:paddingVertical="32dp"
    android:paddingHorizontal="38dp">

    <TextView
        android:id="@+id/play_more_embedded_lyric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="0"
        android:text="@string/embedded_lyric"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="1"
        android:text="@string/local"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_kugou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="2"
        android:text="@string/kugou"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_netease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="3"
        android:text="@string/netease"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="4"
        android:text="@string/qq"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_lrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="5"
        android:text="@string/select_lrc"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_hulue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="6"
        android:text="忽略歌词"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="7"
        android:text="@string/lyric_adjust_font_size"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/play_more_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d24_size"
        android:tag="8"
        android:text="@string/change_offset"
        android:textColor="@color/white" />

</LinearLayout>
