<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TabActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout"
        android:layout_height="fill_parent"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            
            <ImageView
                android:id="@+id/view1"
                android:layout_width="@dimen/d20_size"
                android:layout_height="@dimen/d20_size"
                android:src="@drawable/home_select"/>


            <TextView
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tab_home"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/view3"
                android:layout_width="@dimen/d20_size"
                android:layout_height="@dimen/d20_size"
                android:src="@drawable/play_disselect"/>


            <TextView
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_disselect"
                android:text="@string/tab_play"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/view5"
                android:layout_width="@dimen/d20_size"
                android:layout_height="@dimen/d20_size"
                android:src="@drawable/me_disselect"/>


            <TextView
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_disselect"
                android:text="@string/tab_me"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>